Fixed notification background in dark mode

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -871,3 +871,7 @@ input:focus,
 .gh-dashboard-box {
     border-color: var(--lightgrey);
 }
+
+.gh-notification {
+    background: var(--lightgrey);
+}
